Homework v1.2 updated; files renamed

--- a/Week 2 - Tuesday/ATMS_305_S2017_HW1.md
+++ b/Week 2 - Tuesday/ATMS_305_S2017_HW1.md
@@ -1,6 +1,6 @@
 # ATMS 305 Spring 2017 Homework 1  v1.2
 ## Due: 30 January 2017, 9:30 AM
-Enter the output of these commands, and save the responses/screen shots in a folder called `/data/atms305/a/netID/Week2Answers`.  Copy and paste your entire terminal session in a file called `Week2Answers.txt` in that directory.
+Enter the output of these commands, and save the responses/screen shots in a folder called `/data/atms305/a/netID/ATMS-305/Week2Answers`.  Copy and paste your entire terminal session in a file called `Week2Answers.txt` in that directory.
 
 Fork this repository on the github web page (after you log in), login to keeling, and type the following in your home directory
 
@@ -12,7 +12,7 @@ Note that there are no brackets on your github username in the above command.  T
 ```
 git remote add upstream https://github.com/swnesbitt/ATMS-305.git
 ```
-Now, anytime you want to get updates from me without deleting files you have created, just do the following from your repository directory (usually `/data/atms305/a/netID/ATMS-305`)
+Now, anytime you want to get updates from me without deleting files you have created, just do the following from your class repository directory ( `/data/atms305/a/netID/ATMS-305`)
 ```
 git fetch upstream
 git checkout master
