Homework v1.2 updated; files renamed

--- a/Week 2 - Tuesday/ATMS_305_S2017_HW1.md
+++ b/Week 2 - Tuesday/ATMS_305_S2017_HW1.md
@@ -19,7 +19,7 @@ git checkout master
 git merge upstream/master
 ```
 Now you’re up to date with me on your keeling repository.
-To push any changes up to github.com, do the following from the top level of your repository:
+To push any changes up to github.com, so your repository is up to date on line, including any changes you have made, do the following from the top level of your repository (which is `/data/atms305/a/netID/ATMS-305`):
 ```
 git add –A
 git commit –m “Update due to errors from snesbitt :D”
