--- a/Week2-Tuesday/ATMS_305_S2017_HW1.md
+++ b/Week2-Tuesday/ATMS_305_S2017_HW1.md
@@ -19,13 +19,31 @@ git checkout master
 git merge upstream/master
 ```
 Now you’re up to date with me on your keeling repository.
-To push any changes up to github.com, so your repository is up to date on line, including any changes you have made, do the following from the top level of your repository (which is `/data/atms305/a/netID/ATMS-305`):
+To push any changes up to github.com, so your repository is up to date on line, including any changes you have made, do the following from the top level of your repository (which is `/data/atms305/a/netID/ATMS-305`), do the following.
+
+The first time we do this (and only the first time), we need to add your username to the configuration file.  Do this by editing your repository configuration file, located in the repository folder, in the directory `/data/atms/a/netID/ATMS-305/.git`.  Edit this file:
+```
+pico /data/atms/a/netID/ATMS-305/.git/config
+```
+Edit the iine that starts with `url` to say
+```
+      url = https://[github username]@github.com/[github username]/ATMS-305.git
+```
+Save the file (control-O, and exit control-X).
 ```
 git add –A
 git commit –m “Update due to errors from snesbitt :D”
 git push origin master
 ```
-Obviously you want to have a relevant message intead of an insult to your instructor.  Now all is well on github.  This is how you will submit your assignment also.
+Obviously you want to have a relevant message intead of an insult to your instructor.
+
+If you get an error `cannot open display`, run the windows command Xming, or type
+```
+export SSH_ASKPASS=""
+```
+before the `push` command.
+
+Now all is well on github.  This is how you will submit your assignment also.
 
 # 1. Connecting and disconnecting to keeling
 1.	Log in to `keeling.earth.illinois.edu` using ssh with your netID and password. Log out.
