updated homework a bit! typosgit add Week2-Tuesday/ATMS_305_S2017_HW1.md !

--- a/Week2-Tuesday/ATMS_305_S2017_HW1.md
+++ b/Week2-Tuesday/ATMS_305_S2017_HW1.md
@@ -25,7 +25,7 @@ The first time we do this (and only the first time), we need to add your usernam
 ```
 pico /data/atms/a/netID/ATMS-305/.git/config
 ```
-Edit the iine that starts with `url` to say
+Edit the line that starts with `url` to say
 ```
       url = https://[github username]@github.com/[github username]/ATMS-305.git
 ```
