updated homework a bit! typosgit add Week2-Tuesday/ATMS_305_S2017_HW1.md !

--- a/Week2-Tuesday/ATMS_305_S2017_HW1.md
+++ b/Week2-Tuesday/ATMS_305_S2017_HW1.md
@@ -29,7 +29,7 @@ Edit the line that starts with `url` to say
 ```
       url = https://[github username]@github.com/[github username]/ATMS-305.git
 ```
-Save the file (control-O, and exit control-X).
+Save the file (control-O, and exit control-X).  You won't have to do this again for the rest of the semester.
 ```
 git add –A
 git commit –m “Update due to errors from snesbitt :D”
