minor fix after class

--- a/Week2-Tuesday/ATMS_305_S2017_HW1.md
+++ b/Week2-Tuesday/ATMS_305_S2017_HW1.md
@@ -5,14 +5,14 @@ Enter the output of these commands, and save the responses/screen shots in a fol
 Fork this repository on the github web page (after you log in), login to keeling, and type the following in your home directory
 
 ```
-git clone https://[your github username]@github.com/[your github username]/ATMS-305.git
+git clone https://github.com/[your github username]/ATMS-305.git
 ```
 
 Note that there are no brackets on your github username in the above command.  To get any updates once you have done `clone`, first add my repository as an upstream
 ```
 git remote add upstream https://github.com/swnesbitt/ATMS-305.git
 ```
-Now, anytime you want to get updates from me without deleting files you have created, just do the following from your class repository directory ( `/data/atms305/a/netID/ATMS-305`)
+Now, anytime you want to get updates from me without deleting files you have created, just do the following from your class repository directory ( `/data/atms305/a/netID/ATMS-305`).  If you're not there, `cd` there.
 ```
 git fetch upstream
 git checkout master
