--- a/Week2-Tuesday/ATMS_305_S2017_HW1.md
+++ b/Week2-Tuesday/ATMS_305_S2017_HW1.md
@@ -2,17 +2,26 @@
 ## Due: 30 January 2017, 9:30 AM
 Enter the output of these commands, and save the responses/screen shots in a folder called `/data/atms305/a/netID/ATMS-305/Week2Answers`.  Copy and paste your entire terminal session in a file called `Week2Answers.txt` in that directory.
 
+Need to start fresh?
+Video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdRnFnNU5QWUg2Ync
+[In addition you may need to clear your ATMS-305 folder on keeling; if unsure, please come to office hours!]
+
 Fork this repository on the github web page (after you log in), login to keeling, and type the following in your home directory
+Fork video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdV2pYZnV4Rk15X2s
+Login to keeling video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdNExWNi1JYTlBaE0
+Change directory to home directory video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdVGJzV2I5U3JZQzQ
 
 ```
 git clone https://github.com/[your github username]/ATMS-305.git
 ```
 
 Note that there are no brackets on your github username in the above command.  To get any updates once you have done `clone`, first add my repository as an upstream
+Video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdYXh1Y011WXBMajg
 ```
 git remote add upstream https://github.com/swnesbitt/ATMS-305.git
 ```
 Now, anytime you want to get updates from me without deleting files you have created, just do the following from your class repository directory ( `/data/atms305/a/netID/ATMS-305`).  If you're not there, `cd` there.
+Video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdbFpocmk0TFFYc0U
 ```
 git fetch upstream
 git checkout master
@@ -30,6 +39,7 @@ Edit the line that starts with `url` to say
       url = https://[github username]@github.com/[github username]/ATMS-305.git
 ```
 Save the file (control-O, and exit control-X).  You won't have to do this again for the rest of the semester.
+Video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdSFZwMzJURDBuQlU
 ```
 git add –A
 git commit –m “Update due to errors from snesbitt :D”
