--- a/Week2-Tuesday/ATMS_305_S2017_HW1.md
+++ b/Week2-Tuesday/ATMS_305_S2017_HW1.md
@@ -11,7 +11,7 @@ Fork video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdV2pYZnV4Rk15X
 
 Login to keeling video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdNExWNi1JYTlBaE0
 
-Change directory to home directory video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdVGJzV2I5U3JZQzQ
+Change directory to home directory video tutorial and git clone: https://drive.google.com/open?id=0B84KbZKBlGhdVGJzV2I5U3JZQzQ
 
 
 ```
@@ -20,13 +20,13 @@ git clone https://github.com/[your github username]/ATMS-305.git
 
 Note that there are no brackets on your github username in the above command.  To get any updates once you have done `clone`, first add my repository as an upstream
 
-Video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdYXh1Y011WXBMajg
+Add upstream video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdYXh1Y011WXBMajg
 ```
 git remote add upstream https://github.com/swnesbitt/ATMS-305.git
 ```
 Now, anytime you want to get updates from me without deleting files you have created, just do the following from your class repository directory ( `/data/atms305/a/netID/ATMS-305`).  If you're not there, `cd` there.
 
-Video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdbFpocmk0TFFYc0U
+Fetch, checkout, and merge video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdbFpocmk0TFFYc0U
 ```
 git fetch upstream
 git checkout master
@@ -45,7 +45,7 @@ Edit the line that starts with `url` to say
 ```
 Save the file (control-O, and exit control-X).  You won't have to do this again for the rest of the semester.
 
-Video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdSFZwMzJURDBuQlU
+Edit git config, add, commit, pull, and push video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdSFZwMzJURDBuQlU
 ```
 git add –A
 git commit –m “Update due to errors from snesbitt :D”
