--- a/Week2-Tuesday/ATMS_305_S2017_HW1.md
+++ b/Week2-Tuesday/ATMS_305_S2017_HW1.md
@@ -1,6 +1,9 @@
-# ATMS 305 Spring 2017 Homework 1  v1.3
+# ATMS 305 Spring 2017 Homework 1  v1.4
 ## Due: 30 January 2017, 9:30 AM
 Enter the output of these commands, and save the responses/screen shots in a folder called `/data/atms305/a/netID/ATMS-305/Week2Answers`.  Copy and paste your entire terminal session in a file called `Week2Answers.txt` in that directory.
+
+Stuck after using a command?
+Try pressing "ctrl+c" (stops command) or if that doesn't work, try pressing "q" (exits).
 
 Need to start fresh?
 Video tutorial: https://drive.google.com/open?id=0B84KbZKBlGhdRnFnNU5QWUg2Ync
