--- a/Week2-Tuesday/ATMS_305_S2017_HW1.md
+++ b/Week2-Tuesday/ATMS_305_S2017_HW1.md
@@ -95,7 +95,7 @@ Mind the space between `cd` and `..`! Use the pwd command.
 -> Check using the `pwd` command.
 4.	Enter the `cd` command.
 -> What happens?
-5.	Repeat step *2* until you get an error message.
+5.	Repeat step *2* until the directory doesn't change anymore (check using pwd).
 -> What happens?
 6.	Display the contents of this directory.
 7.	Try the command `cd root`
