--- a/Week2-Tuesday/ATMS_305_S2017_HW1.md
+++ b/Week2-Tuesday/ATMS_305_S2017_HW1.md
@@ -94,12 +94,12 @@ Mind the space between `cd` and `..`! Use the pwd command.
 3.	List the directory contents with the `ls` command.
 -> What do you see?
 -> What do you think these are?
--> Check using the `pwd` command.
+-> Check using the `ls -l` command.
 
 4.	Enter the `cd` command.
 -> What happens?
 
-5.	Repeat step *2* until the directory doesn't change anymore (check using pwd).
+5.	Repeat step *2* until the directory doesn't change anymore (check using `pwd`).
 -> What happens?
 
 6.	Display the contents of this directory.
