add week 4 day 1 w pypos fixed

--- a/Week4-Monday/ATMS_305_S2017_HW3.md
+++ b/Week4-Monday/ATMS_305_S2017_HW3.md
@@ -12,7 +12,7 @@ OUTPUT FROM PROBLEM 2
 ```
 # Problems:
 
-# 1. Setting variables
+## 1. Setting variables
 
 Solve the following problem in `python`, and print the data to screen with a script.  Store the data into variables, and compute the answers using mathematical statements in your script.
 
@@ -27,13 +27,13 @@ You have 90 passengers to take
 Assume that you are running a car pool one way into Chicago from the suburbs in the morning, and that they can only make one trip.
 
 Print to the screen (answer using **full sentences**):
-## a.) How many cars will not be used that day?
-## b.) How many cars will be used that day?
-## c.) What is the total capacity of the car pool (assuming 4 people can fit in each car, including the driver)
-## d.) What is the average number of passengers per car driven?
+### a.) How many cars will not be used that day?
+### b.) How many cars will be used that day?
+### c.) What is the total capacity of the car pool (assuming 4 people can fit in each car, including the driver)
+### d.) What is the average number of passengers per car driven?
 
-# 2. Write a `python` script that will calculate the saturation vapor pressure of water as a function of temperature given a **command line argument** of temperature in *degrees Celsius*.
+## 2. Write a `python` script that will calculate the saturation vapor pressure of water as a function of temperature given a **command line argument** of temperature in *degrees Celsius*.
 
 Use the following formula:
 
-(https://wikimedia.org/api/rest_v1/media/math/render/svg/0ba2adef90ce97ae2d32505e1b00f74ef9030b95")
+(https://wikimedia.org/api/rest_v1/media/math/render/svg/0ba2adef90ce97ae2d32505e1b00f74ef9030b95)
