--- a/Week4-Monday/ATMS_305_S2017_HW3.md
+++ b/Week4-Monday/ATMS_305_S2017_HW3.md
@@ -1,4 +1,4 @@
-# ATMS 305 Spring 2017 Homework 3  v1.0
+# ATMS 305 Spring 2017 Homework 3  v1.1
 ## Due: 13 February 2017, 9:30 AM
 Your homework will be collected from the following folder: `/data/atms305/a/netID/ATMS-305/Week4Answers`.  Place your final scripts for each problem, and the output of the scripts into that folder.  The script output, copied and pasted from the terminal can be saved in a file `Week3Answers.txt` in that directory.  Note each output with a header and footer, such as:
 ```
@@ -22,14 +22,14 @@ You have a fleet of 100 cars
 
 You have 30 drivers
 
-You have 90 passengers to take
+You have 85 passengers to take
 
 Assume that you are running a car pool one way into Chicago from the suburbs in the morning, and that they can only make one trip.
 
 Print to the screen (answer using **full sentences**):
-### a.) How many cars will not be used that day?
-### b.) How many cars will be used that day?
-### c.) What is the total capacity of the car pool (assuming 4 people can fit in each car, including the driver)
+### a.) How many cars will not be used that day? (cars without available drivers)
+### b.) How many cars will be used that day? (cars with available drivers)
+### c.) How many drivers and passengers will be transported in this car pool (assuming 4 people can fit in each car, including the driver)
 ### d.) What is the average number of passengers per car driven?
 
 ## 2. Write a `python` script that will calculate the saturation vapor pressure of water as a function of temperature given a **command line argument** of temperature in *degrees Celsius*.
