--- a/Week5-Monday/ATMS_305_S2017_HW4.md
+++ b/Week5-Monday/ATMS_305_S2017_HW4.md
@@ -1,4 +1,4 @@
-# ATMS 305 Spring 2017 Homework 4  v1.1
+# ATMS 305 Spring 2017 Homework 4  v1.2
 ## Due: 20 February 2017, 9:30 AM
 Your homework will be collected from the following folder: `/data/atms305/a/netID/ATMS-305/Week5Answers`.  Place your final scripts for each problem, and the output of the scripts into that folder.  The script output, copied and pasted from the terminal can be saved in a file `Week5Answers.txt` in that directory.  Note each output with a header and footer, such as:
 ```
@@ -21,13 +21,16 @@ To get the file:
 wget https://raw.githubusercontent.com/swnesbitt/ATMS-305/master/Week5-Monday/aravg.ann.land_ocean.90S.90N.v4.0.1.201612.asc
 ```
 
+The file's first column is the year, the second column is the temperature anomaly in Kelvin.
+
 The script should print the top 10 warmest years to a file called 'top10warmest.txt', including all of the following information:
 
 The output should look like this:
 ```
 Ranking      Year     Temperature Anomaly (degrees C)      Temperature Anomaly (degrees F)
-1.           1745     10.0                                 28.0
-2. (etc.)
+ 1.          2016     0.69                                 1.24
+...
+10.          2003     0.37                                 0.66
 ```
 
 ### 2. Seek and you shall find.
@@ -43,5 +46,8 @@ Print the answers to the screen using a python script.
 
 1. How many reports of snow (including the report SN, -SN, +SN) were there last year?
 1. What fraction of the reports had snow reported?
+1. What was the highest temperature last year, and when was it reported?
+1. What was the mean temperature of all of the reports last year?
+
 1. What was the highest temperature last year, and when was it reported?
 1. What was the mean temperature of all of the reports last year?
