--- a/Week5-Monday/ATMS_305_S2017_HW4.md
+++ b/Week5-Monday/ATMS_305_S2017_HW4.md
@@ -44,7 +44,7 @@ wget https://raw.githubusercontent.com/swnesbitt/ATMS-305/master/Week5-Monday/CM
 
 Print the answers to the screen using a python script.
 
-1. How many reports of snow (including the report SN, -SN, +SN) were there last year?
+1. How many reports of snow (including the report SN, -SN, +SN and any other SN reports) were there last year?
 2. What fraction of the reports had snow reported?
-3. What was the highest temperature last year, and when was it reported?
+3. What was the highest temperature last year, and when was it first reported?
 4. What was the mean temperature of all of the reports last year?
